# word-doc-qa

./: Cargo.toml  README.md  test_questions.txt
docs/: report.md
model_output/: model_config.json  vocab.json
src/: main.rs
src/Documents/: ~$lader_2026.docx
src/data/: dataset.rs  loader.rs  mod.rs  tokenizer.rs
src/inference/: mod.rs
src/model/: embeddings.rs  encoder.rs  mod.rs  qa_model.rs
src/training/: mod.rs
